--- a/src/content/posts/translations/alexandrian-art-of-rulings-4.mdx
+++ b/src/content/posts/translations/alexandrian-art-of-rulings-4.mdx
@@ -20,9 +20,9 @@ _Написал_ [_Джастин Александер_](http://thealexandrian.n
 
 _Перевел Ангон в июле 2018_
 
-Мы начали с рассмотрения того, как заявки игроков (или их отсутствие в случае пассивного восприятия) запускает принятие суждения. Затем мы разложили заявку на намерение, способ и начало действия. Теперь мы готовы перейти к самой сути суждения: разрешению {Resolution}.
+Мы начали с рассмотрения того, как заявки игроков (или их отсутствие в случае пассивного восприятия) запускает принятие суждения. Затем мы разложили заявку на намерение, способ и начало действия. Теперь мы готовы перейти к самой сути суждения: разрешению (Resolution).
 
-Разрешение - это перемычка между намерением и исходом. Во многом о нем можно думать как об испытании {test}: намерение персонажа испытывается, а следствием этого испытания является исход действия. Следовательно, в самых общих чертах разрешение определяет, преуспел ли персонаж в осуществлении своего намерения. (Хотя как мы вскоре увидим, это не всегда настолько просто.)
+Разрешение - это перемычка между намерением и исходом. Во многом о нем можно думать как об испытании (test): намерение персонажа испытывается, а следствием этого испытания является исход действия. Следовательно, в самых общих чертах разрешение определяет, преуспел ли персонаж в осуществлении своего намерения. (Хотя как мы вскоре увидим, это не всегда настолько просто.)
 
 ## Согласие по умолчанию
 
@@ -30,13 +30,13 @@ _Перевел Ангон в июле 2018_
 
 [](http://www.thealexandrian.net/images/20151110.jpg)
 
-Самое простое суждение, которое может принять Ведущий - это “Нет” {“No”}.
+Самое простое суждение, которое может принять Ведущий - это “Нет” (“No”).
 
-**Игрок:** Я хочу перепрыгнуть через расщелину {chasm}.
+**Игрок:** Я хочу перепрыгнуть через расщелину (chasm).
 
 **Ведущий:** Не получится.
 
-**Игрок:** Я хочу убедить герцогиню поддержать лорда Бекингема {Lord Buckingham}.
+**Игрок:** Я хочу убедить герцогиню поддержать лорда Бекингема (Lord Buckingham).
 
 **Ведущий:** Она отказывается слушать.
 
@@ -48,7 +48,7 @@ _Перевел Ангон в июле 2018_
 
 Это делает такой ответ невероятно полезным инструментом. Но также поэтому вам практически никогда не стоит его использовать.
 
-На самом деле вам стоит стремиться к прямо противоположному: к _согласию по умолчанию_ {Default to yes}.
+На самом деле вам стоит стремиться к прямо противоположному: к _согласию по умолчанию_ (Default to yes).
 
 **Игрок:** Я хочу перепрыгнуть через расщелину.
 
@@ -60,17 +60,17 @@ _Перевел Ангон в июле 2018_
 
 **Игрок:** Я расспрашиваю горожан, не слышали ли они чего-нибудь об огре в окрестностях?
 
-**Ведущий:** Старина Хоб {Old Man Hob} говорит, что в прошлом месяце хуторянин по имени Уиллис {farmer named Willis} клял огра, перебившего его овец.
+**Ведущий:** Старина Хоб (Old Man Hob) говорит, что в прошлом месяце хуторянин по имени Уиллис (farmer named Willis) клял огра, перебившего его овец.
 
-“Нет” по природе своей останавливает действие и оставляет ситуацию неизменной. С другой стороны, “Да” {“Yes”} безусловно движет действие вперед и создает новую ситуацию, на которую придется отвечать как вам, так и игроку. Теперь, когда персонаж на другой стороне расщелины, что он сделает? Как ответит лорд Бекингем на неожиданную поддержку со стороны герцогини? Попытаются ли ИП выследить предполагаемого Уиллисова огра?
+“Нет” по природе своей останавливает действие и оставляет ситуацию неизменной. С другой стороны, “Да” (“Yes”) безусловно движет действие вперед и создает новую ситуацию, на которую придется отвечать как вам, так и игроку. Теперь, когда персонаж на другой стороне расщелины, что он сделает? Как ответит лорд Бекингем на неожиданную поддержку со стороны герцогини? Попытаются ли ИП выследить предполагаемого Уиллисова огра?
 
-Другая причина соглашаться по умолчанию состоит в том, что, вообще-то, люди преуспевают в большинстве вещей, которые пытаются сделать. Вы собираетесь поехать в центр города {downtown}? Найти какую-то информацию, погуглив? Забронировать билеты на самолет до Каира {Cairo}? Все это скорее всего случится, если вы попытаетесь это сделать.
+Другая причина соглашаться по умолчанию состоит в том, что, вообще-то, люди преуспевают в большинстве вещей, которые пытаются сделать. Вы собираетесь поехать в центр города (downtown)? Найти какую-то информацию, погуглив? Забронировать билеты на самолет до Каира (Cairo)? Все это скорее всего случится, если вы попытаетесь это сделать.
 
 ## Да, но...
 
-Однако если соглашаться всегда, то это приведет к проблеме отсутствия вызова {challenge}. Это скучно и предсказуемо. (Кроме того, это не отражает то, как устроен мир: провал {failure} или возможность провала - это часть нашей жизни).
+Однако если соглашаться всегда, то это приведет к проблеме отсутствия вызова (challenge). Это скучно и предсказуемо. (Кроме того, это не отражает то, как устроен мир: провал (failure) или возможность провала - это часть нашей жизни).
 
-Все это означает, что нам нужно добавить в наш инструментарий {toolkit} новый инструмент: _“Да, но…”_ {Yes, but…}.
+Все это означает, что нам нужно добавить в наш инструментарий (toolkit) новый инструмент: _“Да, но…”_ (Yes, but…).
 
 **Игрок:** Я хочу перепрыгнуть через расщелину.
 
@@ -78,7 +78,7 @@ _Перевел Ангон в июле 2018_
 
 **Игрок:** Я хочу убедить герцогиню поддержать лорда Бекингема.
 
-**Ведущий:** Она с интересом выслушивает твое предложение и кажется заинтригованной, но она хочет, чтобы ей была обещана поддержка ее наследственных прав на Восточный Предел {Eastermark}.
+**Ведущий:** Она с интересом выслушивает твое предложение и кажется заинтригованной, но она хочет, чтобы ей была обещана поддержка ее наследственных прав на Восточный Предел (Eastermark).
 
 **Игрок:** Я расспрашиваю горожан, не слышали ли они чего-нибудь об огре в окрестностях?
 
@@ -90,17 +90,17 @@ _Перевел Ангон в июле 2018_
 
 Звучит замечательно, правда?
 
-Но что, если желания игроков противоречат известным фактам игрового мира {game world}? Например, они хотят узнать слухи {rumors} об огре, но вы знаете, что в окрестностях этого города нет никаких огров?
+Но что, если желания игроков противоречат известным фактам игрового мира (game world)? Например, они хотят узнать слухи (rumors) об огре, но вы знаете, что в окрестностях этого города нет никаких огров?
 
-Можно предположить, что это приводит нас обратно к “нет”, но до этого дело еще не дошло. Вообще, “нет” является приемлемым ответом только если намерение прямо противоречит реальности игрового мира. Так что до того, как вернуться к “нет”, стоит остановиться на _“Нет, но...”_ {No, but…}.
+Можно предположить, что это приводит нас обратно к “нет”, но до этого дело еще не дошло. Вообще, “нет” является приемлемым ответом только если намерение прямо противоречит реальности игрового мира. Так что до того, как вернуться к “нет”, стоит остановиться на _“Нет, но...”_ (No, but…).
 
-**Игрок:** Могу я найти гильдию волшебников {wizard’s guild}?
+**Игрок:** Могу я найти гильдию волшебников (wizard’s guild)?
 
 **Ведущий:** Да.
 
 **Игрок:** Могу я найти гильдию волшебников?
 
-**Ведущий:** Да, но только если ты отправишься в Грейхок {Greyhawk}, потому что в этом городе гильдии волшебников нет.
+**Ведущий:** Да, но только если ты отправишься в Грейхок (Greyhawk), потому что в этом городе гильдии волшебников нет.
 
 **Игрок:** Есть в этом городе гильдия волшебников?
 
@@ -114,16 +114,16 @@ _Перевел Ангон в июле 2018_
 
 ## Диапазон произвола Ведущего
 
-Давайте назовем совокупность этих четырех ответов диапазоном произвола Ведущего {spectrum of GM fiat}:
+Давайте назовем совокупность этих четырех ответов диапазоном произвола Ведущего (spectrum of GM fiat):
 
 - Да
 - Да, но…
 - Нет, но…
 - Нет
 
-Причина, по которой стоит соглашаться по умолчанию (то есть начинать с верхнего пункта этого диапазона и прорабатывать их по очереди, спускаясь вниз) состоит в том, что каждый сделанный игроками запрос обычно отражает то, что _им хочется совершить_. Когда игрок говорит “Я хочу совершить Х”, он имеет в виду “Я бы получил удовольствие {fun}, если бы смог совершить Х”. И если у вас нет действительно хорошей причины, не стоит запрещать игрокам совершать то, что им хочется. Сеансу игры, скорее всего, пойдет на пользу, если вы сможете выяснить (и предложить игрокам) подход, с помощью которого они смогут совершить это.
+Причина, по которой стоит соглашаться по умолчанию (то есть начинать с верхнего пункта этого диапазона и прорабатывать их по очереди, спускаясь вниз) состоит в том, что каждый сделанный игроками запрос обычно отражает то, что _им хочется совершить_. Когда игрок говорит “Я хочу совершить Х”, он имеет в виду “Я бы получил удовольствие (fun), если бы смог совершить Х”. И если у вас нет действительно хорошей причины, не стоит запрещать игрокам совершать то, что им хочется. Сеансу игры, скорее всего, пойдет на пользу, если вы сможете выяснить (и предложить игрокам) подход, с помощью которого они смогут совершить это.
 
-В некоторых случаях они откажутся от этого подхода (“Я не собираюсь идти в Грейхок, до него слишком далеко.”) Это нормально. Это означает, что они предпочитают совершить что-нибудь еще. Но вы дали им значимый выбор {meaningful choice}, а не отобрали его. В конце концов, выбор - это суть ролевых игр.
+В некоторых случаях они откажутся от этого подхода (“Я не собираюсь идти в Грейхок, до него слишком далеко.”) Это нормально. Это означает, что они предпочитают совершить что-нибудь еще. Но вы дали им значимый выбор (meaningful choice), а не отобрали его. В конце концов, выбор - это суть ролевых игр.
 
 ![Banksy - Bomb Hugger](https://lh4.googleusercontent.com/K2zQKNJOc7-umpvwlzmfebMkkhbgp1u1dJf5lnVjiA5SNBkRAhFpaSz_OkfoI04-tVRgHGjhZWopyOpUkmWIZT1LWg5kObgvEIqDhrjHCNHOjWIngHp3cZfcnnLcPzsdnER6PbwR)
 
@@ -131,11 +131,11 @@ _Перевел Ангон в июле 2018_
 
 Одна из сильных сторон подхода “Да, но…” в том, что на деле такую систему довольно сложно обмануть:
 
-**Игрок:** Могу я сделать ядерную бомбу {nuclear bomb}?
+**Игрок:** Могу я сделать ядерную бомбу (nuclear bomb)?
 
-**Ведущий:** Да, но сначала тебе нужно придумать какой-нибудь способ раздобыть обогащенный уран {enriched uranium}. И если правительство узнает, чем ты занимаешься, тебе светят крупные проблемы начиная с попадания в список разыскиваемых террористов {terrorist watch list}.
+**Ведущий:** Да, но сначала тебе нужно придумать какой-нибудь способ раздобыть обогащенный уран (enriched uranium). И если правительство узнает, чем ты занимаешься, тебе светят крупные проблемы начиная с попадания в список разыскиваемых террористов (terrorist watch list).
 
-(Иногда, конечно, может оказаться, что вы имеете дело с раздражающим игроком {troll player}, который постоянно спрашивает, можно ли полететь в галактику Андромеда {Andromeda galaxy}, во время вашей кампании, посвященной Второй Мировой войне. Но если это происходит постоянно, то с вашей проблемой надо разбираться способами, не имеющими никакого отношения к разрешению действий.)
+(Иногда, конечно, может оказаться, что вы имеете дело с раздражающим игроком (troll player), который постоянно спрашивает, можно ли полететь в галактику Андромеда (Andromeda galaxy), во время вашей кампании, посвященной Второй Мировой войне. Но если это происходит постоянно, то с вашей проблемой надо разбираться способами, не имеющими никакого отношения к разрешению действий.)
 
 Если вам очень сложно избегать “Нет”, не стоит забывать, что близким родичем “Да, но…” является “Расскажи мне, как ты это делаешь.” По сути это тоже самое, за исключением того, что вы побуждаете игрока самого подумать насчет “но”.
 
@@ -143,8 +143,8 @@ _Перевел Ангон в июле 2018_
 
 **Ведущий:** Хорошо. Расскажи мне, как ты ее делаешь.
 
-**Игрок:** Ну… Мне нужен источник обогащенного урана. Могу я сделать проверку Связей {Contacts check}, чтобы посмотреть, нет ли у одного из моих старых русских приятелей {old Russian buddies} возможности достать немного на черном рынке?
+**Игрок:** Ну… Мне нужен источник обогащенного урана. Могу я сделать проверку Связей (Contacts check), чтобы посмотреть, нет ли у одного из моих старых русских приятелей (old Russian buddies) возможности достать немного на черном рынке?
 
-Последний диалог также указывает в направлении съезда {exit ramp}, уводящего нас от диапазона произвола Ведущего: “Я не уверен. Давайте выясним.”
+Последний диалог также указывает в направлении съезда (exit ramp), уводящего нас от диапазона произвола Ведущего: “Я не уверен. Давайте выясним.”
 
-Это та точка, в которой Ведущий и игрок совместно обращаются к переменчивой фортуне {fickle fortune} (то есть к игромеханике) в поисках ответа. Конечно, роль Ведущего еще не завершена: если разрешение заключается в испытании намерения персонажа, то приходит время Ведущему разработать это испытание.
+Это та точка, в которой Ведущий и игрок совместно обращаются к переменчивой фортуне (fickle fortune) (то есть к игромеханике) в поисках ответа. Конечно, роль Ведущего еще не завершена: если разрешение заключается в испытании намерения персонажа, то приходит время Ведущему разработать это испытание.
