--- a/src/content/posts/translations/alexandrian-art-of-rulings-8.mdx
+++ b/src/content/posts/translations/alexandrian-art-of-rulings-8.mdx
@@ -19,40 +19,40 @@ _Оригинал:_ [Art of Rulings – Part 8: Let it Ride _](https://thealexan
 Перевод: [Ангон](https://docs.google.com/document/d/13Ov9ItJiZ_gUPP08wt-gR3EFPOCTnKBMTXRpaW8nqHQ/edit#)
 
 
-Неправильное применение приема {technique} многоэтапного разрешения действия приводит к проблеме, которую я называю “бросай до провала” {rolling to failure}.
-Возможно самым распространенным примером бросков до провала является способ, которым многие Ведущие разрешают скрытность: они требуют от игроков бросать на Скрытность при каждом перемещении их персонажей или при каждой встрече с новым противником. Если шанс персонажа преуспеть на проверке скрытноси составляет 75%, то после трех проверок шанс успеха снижается до 42%, а после пяти - до 23%. И, конечно, при первом же провале попытка действовать скрытно заканчивается неудачно. (Вероятность успеха становится еще хуже, если Ведущий при каждой проверке требует бросать на Скрытность за каждого персонажа игроков и бросает на Восприятие за каждого противника - и когда на лучшем броске на Восприятие выпадет больше успехов, чем на худшем броске на Скрытность, противники поднимают тревогу {the gig is up}.)
-В результате, конечно же, игроки просто прекращают попытки действовать скрытно. Вследствие чего целая категория тактических приемов {set of tactics} исчезает в клубах дыма (а с ней и все те интересные вещи {cool stuff}, которые могут получиться с помощью этих приемов).
-“Почему мои игроки всегда просто бегут в атаку, не думая {charge in mindlessly}?”
+Неправильное применение приема (technique) многоэтапного разрешения действия приводит к проблеме, которую я называю “бросай до провала” (rolling to failure).
+Возможно самым распространенным примером бросков до провала является способ, которым многие Ведущие разрешают скрытность: они требуют от игроков бросать на Скрытность при каждом перемещении их персонажей или при каждой встрече с новым противником. Если шанс персонажа преуспеть на проверке скрытноси составляет 75%, то после трех проверок шанс успеха снижается до 42%, а после пяти - до 23%. И, конечно, при первом же провале попытка действовать скрытно заканчивается неудачно. (Вероятность успеха становится еще хуже, если Ведущий при каждой проверке требует бросать на Скрытность за каждого персонажа игроков и бросает на Восприятие за каждого противника - и когда на лучшем броске на Восприятие выпадет больше успехов, чем на худшем броске на Скрытность, противники поднимают тревогу (the gig is up).)
+В результате, конечно же, игроки просто прекращают попытки действовать скрытно. Вследствие чего целая категория тактических приемов (set of tactics) исчезает в клубах дыма (а с ней и все те интересные вещи (cool stuff), которые могут получиться с помощью этих приемов).
+“Почему мои игроки всегда просто бегут в атаку, не думая (charge in mindlessly)?”
 Возможно, потому, что вы не оставляете им иного выбора.
 Продленный бросок
-Решением этой проблемы является продленный бросок {Let It Ride}.
-Когда ИП пытается достичь чего-то определенного, сделайте одну проверку и пусть результат этой проверки продлится некоторое время {ride forward}. Если персонаж пытается взобраться на утес {ascend a cliff}, сделайте одну проверку Лазания чтобы определить, добрался ли он до вершины или нет (даже если у него на это уйдет несколько ходов, или минут, или часов). Если намерение персонажа - “прокрасться сквозь расположение врага {sneak through the enemy base}”, то вы делаете одну проверку Скрытности за всю операцию, и она определяет, насколько скрытным был персонаж все это время. (И ответ может быть “Не очень скрытным, так что кто-то наверно сможет его заметить”. И это нормально.)
-Продолжение взаимодействия {continuing the interaction}: Распространенная ошибка при использовании продленного броска заключается в том, что Ведущий просто кратко описывает {summarize} всю попытку в целом. Например, игрок заявляет, что он хочет прокрасться в лагерь орков, так что Ведущий просит кинуть на Скрытность, видит успех и говорит: “Хорошо, ты сумел проскользнуть мимо ходящих вокруг лагеря дозорных {guards}, добраться до палатки вожака {chieftain} и стащить тиару {tiara}.”
-Так, конечно, тоже можно. Но продленный бросок хорош тем, что игрок все еще может принимать значимые решения пока результат броска продлевается {roll forward}. Оставив игрока за рулем {in the driver’s seat}, Ведущий может обнаружить, что игрок хотел бы вырубить караульных {sentries} или подслушать {eavesdrop} у палатки, чтобы узнать орочьи планы.
-Эти решения также могут повлиять и на успех или провал всей попытки {endeavor} в целом. Например, если игрок решит пробираться через лучше охраняемую часть лагеря, вполне возможно, что его проверка окажется недостаточно успешной.
-Момент провала {failure point}: Кстати о провале - как Ведущий, использующий продленные броски, может определить, в какой момент попытки этот провал произойдет?
+Решением этой проблемы является продленный бросок (Let It Ride).
+Когда ИП пытается достичь чего-то определенного, сделайте одну проверку и пусть результат этой проверки продлится некоторое время (ride forward). Если персонаж пытается взобраться на утес (ascend a cliff), сделайте одну проверку Лазания чтобы определить, добрался ли он до вершины или нет (даже если у него на это уйдет несколько ходов, или минут, или часов). Если намерение персонажа - “прокрасться сквозь расположение врага (sneak through the enemy base)”, то вы делаете одну проверку Скрытности за всю операцию, и она определяет, насколько скрытным был персонаж все это время. (И ответ может быть “Не очень скрытным, так что кто-то наверно сможет его заметить”. И это нормально.)
+Продолжение взаимодействия (continuing the interaction): Распространенная ошибка при использовании продленного броска заключается в том, что Ведущий просто кратко описывает (summarize) всю попытку в целом. Например, игрок заявляет, что он хочет прокрасться в лагерь орков, так что Ведущий просит кинуть на Скрытность, видит успех и говорит: “Хорошо, ты сумел проскользнуть мимо ходящих вокруг лагеря дозорных (guards), добраться до палатки вожака (chieftain) и стащить тиару (tiara).”
+Так, конечно, тоже можно. Но продленный бросок хорош тем, что игрок все еще может принимать значимые решения пока результат броска продлевается (roll forward). Оставив игрока за рулем (in the driver’s seat), Ведущий может обнаружить, что игрок хотел бы вырубить караульных (sentries) или подслушать (eavesdrop) у палатки, чтобы узнать орочьи планы.
+Эти решения также могут повлиять и на успех или провал всей попытки (endeavor) в целом. Например, если игрок решит пробираться через лучше охраняемую часть лагеря, вполне возможно, что его проверка окажется недостаточно успешной.
+Момент провала (failure point): Кстати о провале - как Ведущий, использующий продленные броски, может определить, в какой момент попытки этот провал произойдет?
 В тех случаях, когда результат проверки по очереди сравнивается с последовательностью различных вызовов (как проверка Скрытности сравнивается с Восприятием всяких дозорных и караульных), это можно решить относительно легко. (Тебя заметит тот дозорный, который первым превзойдет твою проверку Скрытности.)
-Но что насчет чего-нибудь вроде той проверки Лазания, чтобы взобраться на утес {scaling a cliff}? При провале проверки насколько далеко они забрались до того, как провалили проверку?
+Но что насчет чего-нибудь вроде той проверки Лазания, чтобы взобраться на утес (scaling a cliff)? При провале проверки насколько далеко они забрались до того, как провалили проверку?
 (Как и в случае любой проверки, конечно, Ведущему все еще нужно решить, что значит провал. Значит ли это, что персонаж срывается и падает? Что он должен за что-то ухватиться, чтобы не упасть? Что он застрял? Что он понял, что по каким-то причинам не может забраться на вершину, и теперь вынужден спускаться?)
-Говоря в общем, существует три подхода. Вы можете рассудить {make a judgment call}, основываясь на том, что, как вам кажется, будет интереснее {most interesting}. Вы можете отдать это на откуп случайности (Например, бросить процентные кубики {percentile dice} чтобы определить, как высоко на утес персонажи смогли взобраться или сколько денег они потратили в казино {casino}.) Или можно использовать величину провала проверки для расчета результата (или обоснования ваших рассуждений).
-Момент неопределенности {point of uncertainty}: Другой прием, который я использую при продлении броска - это момент неопределенности. В момент неопределенности возникает угроза {risk}, что результатом первоначальной проверки окажется провал, но у персонажа есть возможность спасти {save} этот результат, предприняв определенные действия.
-Момент неопределенности может возникнуть в результате провала первоначальной проверки. Например, крадущийся по лагерю орков персонаж встречает разведчика {scout} с достаточно высоким Восприятием, чтобы заметить ИП. Сможет ли персонаж его вырубить (или предпринять какие-то другие превентивные действия) до того, как разведчик поднимет тревогу {raises the alarm}? (Если хочется игромеханической подсказки {mechanical cue}, можно решить, что при небольшой величине провала возникает момент неопределенности, и только большая величина провала сразу же приводит к катастрофе.)
-Однако момент неопределенности может возникнуть и в результате какого-то постороннего события {tangential action}, которое оказывается замешано в происходящее и напрямую мешает вашей первоначальной проверке. Например, вы осуществили продленную проверку Общения {riding Social check} для устройства аферы {con job}. Вы болтаете с вашей жертвой {mark} на светской вечеринке - и вдруг замечаете жертву вашей предыдущей аферы {former mark} в другом углу зала. Если он вас заметит, то ваше новое прикрытие {cover} будет разрушено. Сможете ли вы пройти проверку Скрытности, чтобы он вас не увидел?
-Момент неопределенности позволяет вам добавлять осложнения в то время как в общем разрешение ситуации продолжает продвигаться вперед. (Посмотрите какой угодно фильм про ограбление {heist movie} - и вы увидите, чем это полезно.)
-Стоит отметить, что вы никогда не проходите проверку Скрытности чтобы поддержать {maintain} проверку Скрытности и не проходите проверку Общения чтобы поддержать проверку Общения. Если вы прятались {sneaking around} и оказались в ситуации, когда единственная возможность преуспеть - попробовать спрятаться снова, это значит, что ваша первоначальная попытка не находится под угрозой, а завершилась провалом.
-Завершение продления {ending the ride}: С учетом вышесказанного, когда же одна попытка завершается и начинается новая? Провал, конечно, - один из возможных вариантов. Если ИПы провалили свою попытку прокрасться в орочий лагерь, сразились с заметившими их орками, а затем попытались вновь действовать скрытно, это новая попытка и они должны пройти новую проверку.
-Если провала не происходит, то Ведущий должен обратить внимание в первую очередь на смену подхода {change in approach}. Если ИПы прокрались мимо не заметивших их орков, но решили напасть на них из засады {ambush} и ввязались в сражение с ними {melee}, это тоже завершает попытку персонажей действовать скрытно, и если позднее они решат красться дальше, то им, пожалуй, стоит пройти новую проверку.
-(Заметьте, что это не то же самое, что и прерванная {interrupted} попытка. Если партия взбирается на гору и на середине пути вступает в бой с несколькими йети {yetis}, это не значит, что ИПы сменили подход или что проверка Лазания, чтобы достичь вершины окончилась провалом, - она просто была прервана схваткой с йети, так что первоначальная проверка Лазания должна быть продлена и дальше.)
-В более редких случаях Ведущему стоит обратить внимание на значительные изменения в обстоятельствах {circumstance}. Конечно, грань тут тонкая {fuzzy}, потому что очень легко попасться в ловушку, считая каждого встречного караульного изменением обстоятельств и требуя нового броска. А это, разумеется, прямо противоположно тому, чего желательно достичь. Но в некоторых случаях может произойти столь значительное событие {seismic event}, кардинально изменяющее ситуацию, что персонажам придется выполнять по сути своей совершенно другое задание. Например, пока ИПы крадутся по орочьему лагерю, на него нападает большой отряд {huge platoon} огненных великанов {fire giants}. Ведущий вполне может решить, что поскольку “охваченное огнем поле боя” достаточно отличается от “спящего лагеря орков глубокой ночью”, это совершенно другая ситуация, требующая новой проверки. 
-(Вы также можете использовать другой прием работы с изменяющимися обстоятельствами, просто модифицируя первоначальную проверку. Например, если используемый ИП кибердек {cyberdeck} подцепил зловредный вирус {nasty virus}, в то время как персонаж взламывал {hacking} суперкомпьютер {mainframe}, Ведущий может просто применить штраф к результату первоначальной проверки, чтобы отразить проблемы с оборудованием {debilitated equipment}, вместо того, чтобы требовать новой проверки.)
-Затем, достигнута ли первоначальная цель {original goal}? Если ИП пытался соблазнить барона фон Исбери {Baron von Isbury} и барон соблазнился, то это продление {ride} подошло к концу. Если персонаж взбирался на гору и достиг вершины, то он успешно преодолел препятствие.
-Однако подобным же образом вы можете обращать внимание на то, была ли достигнута значительная веха {significant landmark} или выполнена существенная задача. Опять же, грань может быть тонкой. (“Каждый раз, когда вы пробираетесь мимо караульного, вы чего-то достигаете! Новый бросок!”) Вам стоит высматривать только такие достижения, которые не будут с легкостью перечеркнуты {trivially negated} в результате последующего провала. Например, вместо того, чтобы разрешить одной проверкой Лазания покорение всей горы целиком, можно использовать отдельную проверку Лазания на то, чтобы достичь каждого базового лагеря {base camp}: при провале проверки партия не оказывается вынужденной отступить к подножию горы, а может вернуться в предыдущий базовый лагерь  (так что добраться до следующего базового лагеря - значимое достижение).
-Аналогично, после того как ИПы преодолели внешние защиты {outer defenses} вражеского комплекса {enemy compound} и установили устройство удаленного доступа {remote access device} на суперкомпьютер, вы можете попросить их сделать еще одну проверку Скрытности, чтобы выбраться из комплекса {complex}.
+Говоря в общем, существует три подхода. Вы можете рассудить (make a judgment call), основываясь на том, что, как вам кажется, будет интереснее (most interesting). Вы можете отдать это на откуп случайности (Например, бросить процентные кубики (percentile dice) чтобы определить, как высоко на утес персонажи смогли взобраться или сколько денег они потратили в казино (casino).) Или можно использовать величину провала проверки для расчета результата (или обоснования ваших рассуждений).
+Момент неопределенности (point of uncertainty): Другой прием, который я использую при продлении броска - это момент неопределенности. В момент неопределенности возникает угроза (risk), что результатом первоначальной проверки окажется провал, но у персонажа есть возможность спасти (save) этот результат, предприняв определенные действия.
+Момент неопределенности может возникнуть в результате провала первоначальной проверки. Например, крадущийся по лагерю орков персонаж встречает разведчика (scout) с достаточно высоким Восприятием, чтобы заметить ИП. Сможет ли персонаж его вырубить (или предпринять какие-то другие превентивные действия) до того, как разведчик поднимет тревогу (raises the alarm)? (Если хочется игромеханической подсказки (mechanical cue), можно решить, что при небольшой величине провала возникает момент неопределенности, и только большая величина провала сразу же приводит к катастрофе.)
+Однако момент неопределенности может возникнуть и в результате какого-то постороннего события (tangential action), которое оказывается замешано в происходящее и напрямую мешает вашей первоначальной проверке. Например, вы осуществили продленную проверку Общения (riding Social check) для устройства аферы (con job). Вы болтаете с вашей жертвой (mark) на светской вечеринке - и вдруг замечаете жертву вашей предыдущей аферы (former mark) в другом углу зала. Если он вас заметит, то ваше новое прикрытие (cover) будет разрушено. Сможете ли вы пройти проверку Скрытности, чтобы он вас не увидел?
+Момент неопределенности позволяет вам добавлять осложнения в то время как в общем разрешение ситуации продолжает продвигаться вперед. (Посмотрите какой угодно фильм про ограбление (heist movie) - и вы увидите, чем это полезно.)
+Стоит отметить, что вы никогда не проходите проверку Скрытности чтобы поддержать (maintain) проверку Скрытности и не проходите проверку Общения чтобы поддержать проверку Общения. Если вы прятались (sneaking around) и оказались в ситуации, когда единственная возможность преуспеть - попробовать спрятаться снова, это значит, что ваша первоначальная попытка не находится под угрозой, а завершилась провалом.
+Завершение продления (ending the ride): С учетом вышесказанного, когда же одна попытка завершается и начинается новая? Провал, конечно, - один из возможных вариантов. Если ИПы провалили свою попытку прокрасться в орочий лагерь, сразились с заметившими их орками, а затем попытались вновь действовать скрытно, это новая попытка и они должны пройти новую проверку.
+Если провала не происходит, то Ведущий должен обратить внимание в первую очередь на смену подхода (change in approach). Если ИПы прокрались мимо не заметивших их орков, но решили напасть на них из засады (ambush) и ввязались в сражение с ними (melee), это тоже завершает попытку персонажей действовать скрытно, и если позднее они решат красться дальше, то им, пожалуй, стоит пройти новую проверку.
+(Заметьте, что это не то же самое, что и прерванная (interrupted) попытка. Если партия взбирается на гору и на середине пути вступает в бой с несколькими йети (yetis), это не значит, что ИПы сменили подход или что проверка Лазания, чтобы достичь вершины окончилась провалом, - она просто была прервана схваткой с йети, так что первоначальная проверка Лазания должна быть продлена и дальше.)
+В более редких случаях Ведущему стоит обратить внимание на значительные изменения в обстоятельствах (circumstance). Конечно, грань тут тонкая (fuzzy), потому что очень легко попасться в ловушку, считая каждого встречного караульного изменением обстоятельств и требуя нового броска. А это, разумеется, прямо противоположно тому, чего желательно достичь. Но в некоторых случаях может произойти столь значительное событие (seismic event), кардинально изменяющее ситуацию, что персонажам придется выполнять по сути своей совершенно другое задание. Например, пока ИПы крадутся по орочьему лагерю, на него нападает большой отряд (huge platoon) огненных великанов (fire giants). Ведущий вполне может решить, что поскольку “охваченное огнем поле боя” достаточно отличается от “спящего лагеря орков глубокой ночью”, это совершенно другая ситуация, требующая новой проверки. 
+(Вы также можете использовать другой прием работы с изменяющимися обстоятельствами, просто модифицируя первоначальную проверку. Например, если используемый ИП кибердек (cyberdeck) подцепил зловредный вирус (nasty virus), в то время как персонаж взламывал (hacking) суперкомпьютер (mainframe), Ведущий может просто применить штраф к результату первоначальной проверки, чтобы отразить проблемы с оборудованием (debilitated equipment), вместо того, чтобы требовать новой проверки.)
+Затем, достигнута ли первоначальная цель (original goal)? Если ИП пытался соблазнить барона фон Исбери (Baron von Isbury) и барон соблазнился, то это продление (ride) подошло к концу. Если персонаж взбирался на гору и достиг вершины, то он успешно преодолел препятствие.
+Однако подобным же образом вы можете обращать внимание на то, была ли достигнута значительная веха (significant landmark) или выполнена существенная задача. Опять же, грань может быть тонкой. (“Каждый раз, когда вы пробираетесь мимо караульного, вы чего-то достигаете! Новый бросок!”) Вам стоит высматривать только такие достижения, которые не будут с легкостью перечеркнуты (trivially negated) в результате последующего провала. Например, вместо того, чтобы разрешить одной проверкой Лазания покорение всей горы целиком, можно использовать отдельную проверку Лазания на то, чтобы достичь каждого базового лагеря (base camp): при провале проверки партия не оказывается вынужденной отступить к подножию горы, а может вернуться в предыдущий базовый лагерь  (так что добраться до следующего базового лагеря - значимое достижение).
+Аналогично, после того как ИПы преодолели внешние защиты (outer defenses) вражеского комплекса (enemy compound) и установили устройство удаленного доступа (remote access device) на суперкомпьютер, вы можете попросить их сделать еще одну проверку Скрытности, чтобы выбраться из комплекса (complex).
 Многоэтапное разрешение против Продленного броска
-Как вы уже могли заметить, я высказал аргументы как в пользу разделения одного намерения на несколько этапов, так и в пользу разрешения больших отрезков времени {broad swaths of time} одной проверкой. Нет ли здесь противоречия?
+Как вы уже могли заметить, я высказал аргументы как в пользу разделения одного намерения на несколько этапов, так и в пользу разрешения больших отрезков времени (broad swaths of time) одной проверкой. Нет ли здесь противоречия?
 На самом деле его нет. Это разные инструменты, которые можно использовать разными способами для достижения различных эффектов. Но как узнать, какой из них стоит использовать?
-Что ж, до определенной степени это еще одна из тех областей, из-за которых этот цикл статей называется Искусство Суждений, а не  Блок-схема Суждений {Flowchart of Rulings}. Но вот пара соображений, которые стоит принять во внимание.
-Во-первых, обратите внимание на то, что, если вы правильно применяете многоэтапное разрешение действий, каждый вектор заканчивается в точке со значимыми последствиями или значимым выбором. Вы также могли заметить, что продленная проверка может завершиться в том числе и потому, что персонажи игроков выбрали новый подход или достигли какого-то рода вехи (т.е. случились какие-то последствия). Во многих случаях эти игромеханические подходы {mechanical approaches} - просто две стороны одной монеты {two sides of the same coin}. 
-Во-вторых, если персонаж снова и снова проходит проверку одного и того же навыка и последствия любого провала перечеркивают {wipe out} все предыдущие успехи… вам стоит использовать продленный бросок в девяноста девяти случаях из ста.
-(Исключением здесь являются проверки на прочность {endurance checks}, т.е. ситуации, в которых провал рано или поздно наверняка произойдет, и вопрос в том, насколько персонаж сможет отсрочить этот провал. Например, как долго вы можете не терять сознание {stay conscious} в вакууме {vacuum}? Как долго удерживаться на плаву {keep swimming} во время ужасного шторма {terrible storm}? Сколько времени выживать {survive exposure} среди вьюг и метелей {in the middle of a blizzard}?)
-Наконец, едва ли вы сильно ошибетесь, если сведете это к простому вопросу: какой из вариантов выглядит более интересным {more fun}?
+Что ж, до определенной степени это еще одна из тех областей, из-за которых этот цикл статей называется Искусство Суждений, а не  Блок-схема Суждений (Flowchart of Rulings). Но вот пара соображений, которые стоит принять во внимание.
+Во-первых, обратите внимание на то, что, если вы правильно применяете многоэтапное разрешение действий, каждый вектор заканчивается в точке со значимыми последствиями или значимым выбором. Вы также могли заметить, что продленная проверка может завершиться в том числе и потому, что персонажи игроков выбрали новый подход или достигли какого-то рода вехи (т.е. случились какие-то последствия). Во многих случаях эти игромеханические подходы (mechanical approaches) - просто две стороны одной монеты (two sides of the same coin). 
+Во-вторых, если персонаж снова и снова проходит проверку одного и того же навыка и последствия любого провала перечеркивают (wipe out) все предыдущие успехи… вам стоит использовать продленный бросок в девяноста девяти случаях из ста.
+(Исключением здесь являются проверки на прочность (endurance checks), т.е. ситуации, в которых провал рано или поздно наверняка произойдет, и вопрос в том, насколько персонаж сможет отсрочить этот провал. Например, как долго вы можете не терять сознание (stay conscious) в вакууме (vacuum)? Как долго удерживаться на плаву (keep swimming) во время ужасного шторма (terrible storm)? Сколько времени выживать (survive exposure) среди вьюг и метелей (in the middle of a blizzard)?)
+Наконец, едва ли вы сильно ошибетесь, если сведете это к простому вопросу: какой из вариантов выглядит более интересным (more fun)?
