--- a/src/content/posts/translations/alexandrian-art-of-rulings-2.mdx
+++ b/src/content/posts/translations/alexandrian-art-of-rulings-2.mdx
@@ -22,17 +22,17 @@ _Перевел Ангон в июне 2018_
 
 Игрок заявляет: “Я хочу совершить Х”.
 
-В этот момент Ведущий должен принять суждение. В этот момент он должен решить, каким будет результат того, что персонаж игрока совершит Х. И на самом базовом уровне в этом и заключается вся ролевая игра: каждый отдельный сеанс {session} игры может, в сущности, быть определен как последовательность подобных взаимодействий.
+В этот момент Ведущий должен принять суждение. В этот момент он должен решить, каким будет результат того, что персонаж игрока совершит Х. И на самом базовом уровне в этом и заключается вся ролевая игра: каждый отдельный сеанс (session) игры может, в сущности, быть определен как последовательность подобных взаимодействий.
 
 В предыдущей главе мы говорили о том, что умения игрока приводят в действие умения персонажа (то есть сначала игрок должен заявить, что его персонаж что-то делает, и только потом персонаж это сделает), а также про то, что умения игрока могут превзойти умения персонажа (то есть не нужно определять с помощью игромеханики, совершил ли персонаж определенный выбор, если игрок уже однозначно сделал этот выбор).
 
 Вспомнив об этих основополагающих принципах, мы можем взглянуть на Искусство Суждений немного с другой стороны, разделив суждение на три отдельных этапа:
 
-1. Игрок заявляет свое намерение {intention}.
+1. Игрок заявляет свое намерение (intention).
 2. Предпринятое действие разрешается.
-3. Исход {outcome} действия излагается {narrated}.
+3. Исход (outcome) действия излагается (narrated).
 
-На первый взгляд это кажется довольно простым. Игрок заявляет, что он хочет ударить кого-то мечом. Вы делаете бросок атаки {attack roll} чтобы определить, удалось ли ему это. Разрешив ситуацию с помощью игромеханики, вы говорите, попал он или нет.
+На первый взгляд это кажется довольно простым. Игрок заявляет, что он хочет ударить кого-то мечом. Вы делаете бросок атаки (attack roll) чтобы определить, удалось ли ему это. Разрешив ситуацию с помощью игромеханики, вы говорите, попал он или нет.
 
 Однако на практике все может быть намного сложнее, и по ходу дела вы обнаружите немало подвохов.
 
@@ -52,7 +52,7 @@ _Перевел Ангон в июне 2018_
 
 **Игрок:** Я спрыгиваю на землю.
 
-**Ведущий:** Хорошо, ты падаешь 200 футов, получаешь 20к6 единиц урона {20d6 points of damage} и умираешь.
+**Ведущий:** Хорошо, ты падаешь 200 футов, получаешь 20к6 единиц урона (20d6 points of damage) и умираешь.
 
 **Игрок:** Что? Я думал, здание всего 20 футов высотой!
 
@@ -76,11 +76,11 @@ _Перевел Ангон в июне 2018_
 
 **Ведущий:** Нет, но здание высотой 200 футов. Ты получишь 20к6 единиц урона, если спрыгнешь.
 
-**Игрок:** Я собираюсь сотворить заклинание _Падение пера_ {feather fall}. Я просто хочу, чтобы принцесса _решила_, что я совершил самоубийство.
+**Игрок:** Я собираюсь сотворить заклинание _Падение пера_ (feather fall). Я просто хочу, чтобы принцесса _решила_, что я совершил самоубийство.
 
 **Ведущий:** Ясно, продолжай.
 
-Это относится не только к смертельно опасным ситуациям. Например, если вы ведете детектив {mystery scenario} и один из игроков заявляет “Я осматриваю ковер”, но вы не понимаете, зачем он хочет осмотреть ковер, просто спросите его.
+Это относится не только к смертельно опасным ситуациям. Например, если вы ведете детектив (mystery scenario) и один из игроков заявляет “Я осматриваю ковер”, но вы не понимаете, зачем он хочет осмотреть ковер, просто спросите его.
 
 **Игрок:** Я осматриваю ковер.
 
@@ -98,27 +98,27 @@ _Если вы не понимаете, чего игроки стараются
 
 ## Намерение - это не начало действия
 
-Отсюда также следует и то, что намерение - это не начало действия {initiation}.
+Отсюда также следует и то, что намерение - это не начало действия (initiation).
 
 Увлекшись игрой, мы подчас описываем свои заявки как происходящие в настоящем времени действия: “Я спрыгиваю с крыши!” или “Я пронзаю его мечом!”.
 
-Несомненно, _возможно_ трактовать такие заявки как необратимые {irrevocable} (и некоторые неопытные Ведущие так и делают), но как мы только что увидели, это нередко приводит к неудовлетворительным результатам. Лучше понимать такие заявки в том смысле, который в них на самом деле вкладывается: “Я намереваюсь спрыгнуть с крыши” или “Я хочу пронзить его своим мечом”.
+Несомненно, _возможно_ трактовать такие заявки как необратимые (irrevocable) (и некоторые неопытные Ведущие так и делают), но как мы только что увидели, это нередко приводит к неудовлетворительным результатам. Лучше понимать такие заявки в том смысле, который в них на самом деле вкладывается: “Я намереваюсь спрыгнуть с крыши” или “Я хочу пронзить его своим мечом”.
 
-Вместе с тем, очевидно _существует_ точка невозврата, после которой игрок не может “взять назад” {“take back”} заявленное действие. Это происходит в тот момент, когда мы начинаем разрешать действие, которое он намеревался совершить. В этот переломный момент действие действительно _началось_.
+Вместе с тем, очевидно _существует_ точка невозврата, после которой игрок не может “взять назад” (“take back”) заявленное действие. Это происходит в тот момент, когда мы начинаем разрешать действие, которое он намеревался совершить. В этот переломный момент действие действительно _началось_.
 
-Не следует также путать намерение с исходом. Например, если игрок заявляет “Я хочу пронзить его мечом насквозь!”, совершенно необязательно, что именно это произойдет. Более того, необязательно, что это произойдет даже _при успешном броске атаки_. Если игрок преуспел на броске атаки (и персонаж попал по цели), удар может только сорвать с полурослика {halfling} куртку, открыв мифрильную кольчугу {shirt of mithril} под ней. (Или, как вариант, результат броска на урон {damage roll} может быть недостаточно высок и не соответствовать тому исходу, при котором враг насквозь пронзен мечом. К этому мы еще вернемся.)
+Не следует также путать намерение с исходом. Например, если игрок заявляет “Я хочу пронзить его мечом насквозь!”, совершенно необязательно, что именно это произойдет. Более того, необязательно, что это произойдет даже _при успешном броске атаки_. Если игрок преуспел на броске атаки (и персонаж попал по цели), удар может только сорвать с полурослика (halfling) куртку, открыв мифрильную кольчугу (shirt of mithril) под ней. (Или, как вариант, результат броска на урон (damage roll) может быть недостаточно высок и не соответствовать тому исходу, при котором враг насквозь пронзен мечом. К этому мы еще вернемся.)
 
-Разумеется, _на практике_ разделение между намерением, началом действия, разрешением действия и исходом зачастую стирается. Если игрок за игровым столом заявляет что-нибудь вроде “Я говорю леди Гвендолин {Lady Gwendolyn}, что она самая прекрасная девушка из всех мною виденных”, то это просто происходит. Подобным образом, заявка “Я прохожу через комнату” обычно приводит к автоматическому результату: намерение, начало действия и его разрешение происходят одновременно, а исход - практически одновременно, поскольку сразу после этого будет сказано что-нибудь вроде “Ты теперь на другой стороне комнаты”.
+Разумеется, _на практике_ разделение между намерением, началом действия, разрешением действия и исходом зачастую стирается. Если игрок за игровым столом заявляет что-нибудь вроде “Я говорю леди Гвендолин (Lady Gwendolyn), что она самая прекрасная девушка из всех мною виденных”, то это просто происходит. Подобным образом, заявка “Я прохожу через комнату” обычно приводит к автоматическому результату: намерение, начало действия и его разрешение происходят одновременно, а исход - практически одновременно, поскольку сразу после этого будет сказано что-нибудь вроде “Ты теперь на другой стороне комнаты”.
 
-Это, очевидно, хорошо для течения игрового процесса {gameplay}. Не требуется (да и не нужно) каждый раз останавливаться и разделять взаимодействие на его составляющие. Но если возникнет противоречие или путаница и потребуется устранить неполадки, будет полезным иметь в виду, что на самом деле это _отдельные этапы_.
+Это, очевидно, хорошо для течения игрового процесса (gameplay). Не требуется (да и не нужно) каждый раз останавливаться и разделять взаимодействие на его составляющие. Но если возникнет противоречие или путаница и потребуется устранить неполадки, будет полезным иметь в виду, что на самом деле это _отдельные этапы_.
 
 ## Одноэтапные и многоэтапные намерения
 
-Стоит также отметить, что одноэтапные {single-step} намерения обычно довольно очевидны. Заявка “Я хочу пронзить его мечом” не требует никаких пояснений.
+Стоит также отметить, что одноэтапные (single-step) намерения обычно довольно очевидны. Заявка “Я хочу пронзить его мечом” не требует никаких пояснений.
 
-Но не все, что выглядит как одноэтапное намерение, на самом деле является таковым. Например, если игрок заявляет “Я хочу запрыгнуть на груду ящиков {crates}”, то одноэтапное намерение заключается в “оказаться на груде ящиков”. Вроде все просто. Но на самом деле целью игрока при запрыгивании на груду ящиков может быть более удобная позиция для стрельбы по плохим парням. Если позиция на груде ящиков действительно более удобная, то все отлично. Если же это не так, то может пройти еще целый ход {full round} перед тем, как обнаружится недопонимание. (И к этому моменту, конечно, уже слишком поздно его устранять.)
+Но не все, что выглядит как одноэтапное намерение, на самом деле является таковым. Например, если игрок заявляет “Я хочу запрыгнуть на груду ящиков (crates)”, то одноэтапное намерение заключается в “оказаться на груде ящиков”. Вроде все просто. Но на самом деле целью игрока при запрыгивании на груду ящиков может быть более удобная позиция для стрельбы по плохим парням. Если позиция на груде ящиков действительно более удобная, то все отлично. Если же это не так, то может пройти еще целый ход (full round) перед тем, как обнаружится недопонимание. (И к этому моменту, конечно, уже слишком поздно его устранять.)
 
-В конечном счете, мы возвращаемся к нашему общему принципу (понимать, _зачем_ игроки пытаются совершить что-либо, перед тем, как выносить суждение относительно этого действия). Однако из сказанного выше следует, что вам необходимо понимать цели игроков не только на на микроуровне {micro-level}, но и на макроуровне {macro-level} (И, по правде сказать, недопонимания на макроуровне могут нанести намного больше ущерба игре, поскольку до того, как они станут понятны, на достижение цели может оказаться затрачено очень много средств.)
+В конечном счете, мы возвращаемся к нашему общему принципу (понимать, _зачем_ игроки пытаются совершить что-либо, перед тем, как выносить суждение относительно этого действия). Однако из сказанного выше следует, что вам необходимо понимать цели игроков не только на на микроуровне (micro-level), но и на макроуровне (macro-level) (И, по правде сказать, недопонимания на макроуровне могут нанести намного больше ущерба игре, поскольку до того, как они станут понятны, на достижение цели может оказаться затрачено очень много средств.)
 
 ## Понимание применяемого игроком способа
 
@@ -126,15 +126,15 @@ _Если вы не понимаете, чего игроки стараются
 
 Опять же, на практике намерение и способ подчас смешиваются, обычно поскольку играющие естественным образом переходят сразу к способу. “Я хочу пронзить его мечом!” - это способ, за которым прячется более общее намерение “Я хочу навредить ему!” (И, по правде говоря, я собираюсь в дальнейшем рассматривать намерение и способ как одно и то же, поскольку большую часть времени так оно и есть).
 
-Однако время от времени отсутствие способа может быть проблемой. Обычно так происходит на макро-уровне, и, по-моему, чаще всего это всплывает при социальных взаимодействиях {social interactions}: “Я хочу соблазнить принцессу” или “Я убеждаю его помочь нам войсками” - это заявления о намерениях, в которых, очевидным образом отсутствует способ достижения этих намерений. Можно представить себе заявки вроде: “Я хочу оказаться по другую сторону стены” или “Я хочу, чтобы он умер!”
+Однако время от времени отсутствие способа может быть проблемой. Обычно так происходит на макро-уровне, и, по-моему, чаще всего это всплывает при социальных взаимодействиях (social interactions): “Я хочу соблазнить принцессу” или “Я убеждаю его помочь нам войсками” - это заявления о намерениях, в которых, очевидным образом отсутствует способ достижения этих намерений. Можно представить себе заявки вроде: “Я хочу оказаться по другую сторону стены” или “Я хочу, чтобы он умер!”
 
 Если мы предполагаем, что умения персонажа приводятся в действие умениями игрока, то можно посмотреть на эту проблему и с другой стороны: такая заявка игрока недостаточно конкретна для того, чтобы были задействованы умения его персонажа.
 
-По счастью, эта проблема довольно легко решается: “Каким образом ты это делаешь?” {“How do you do that?”}
+По счастью, эта проблема довольно легко решается: “Каким образом ты это делаешь?” (“How do you do that?”)
 
-Обычно этого достаточно. Но иногда вам могут попасться игроки, которые хотят просто “закидать это игромеханикой” {“throw a mechanic at it”}. Это чревато проблемами, поскольку (а) вам придется постоянно требовать от них дополнительных подробностей, и (б) они нередко верят, что “Я использую Дипломатию, чтобы соблазнить ее” или “Я использую Знание Подземелий {Dungeoneering}, чтобы оказаться по другую сторону” - это осмысленные ответы на подобный вопрос. В таком случае вам просто нужно начать напирать на конкретные подробности: “Как ты приветствуешь ее? Что ты ей говоришь? Когда она говорит то-то и то-то, как ты отвечаешь?”
+Обычно этого достаточно. Но иногда вам могут попасться игроки, которые хотят просто “закидать это игромеханикой” (“throw a mechanic at it”). Это чревато проблемами, поскольку (а) вам придется постоянно требовать от них дополнительных подробностей, и (б) они нередко верят, что “Я использую Дипломатию, чтобы соблазнить ее” или “Я использую Знание Подземелий (Dungeoneering), чтобы оказаться по другую сторону” - это осмысленные ответы на подобный вопрос. В таком случае вам просто нужно начать напирать на конкретные подробности: “Как ты приветствуешь ее? Что ты ей говоришь? Когда она говорит то-то и то-то, как ты отвечаешь?”
 
-Следует отметить, что это одна из причин, по которой я говорю об _Искусстве_ {ART} суждений, а не о _Науке_ {SCIENCE} суждений. Существует золотая середина, в которой способ был описан достаточно подробно для того, чтобы умения игрока привели в действие умения персонажа. Что считать этой золотой серединой, зависит от вас, от ваших игроков, от используемой системы правил и от непосредственной ситуации, сложившейся на сеансе игры.
+Следует отметить, что это одна из причин, по которой я говорю об _Искусстве_ (ART) суждений, а не о _Науке_ (SCIENCE) суждений. Существует золотая середина, в которой способ был описан достаточно подробно для того, чтобы умения игрока привели в действие умения персонажа. Что считать этой золотой серединой, зависит от вас, от ваших игроков, от используемой системы правил и от непосредственной ситуации, сложившейся на сеансе игры.
 
 Например, представьте, что ИПы - полицейские детективы, входящие в комнату, посередине которой лежит труп. Намерения игроков в этой сцене скорее всего будут заключаться в вопросах, ответы на которые они хотят получить. Но насколько конкретными должны быть эти вопросы для того, чтобы Ведущий мог принять суждение о том, выяснят они ответ или нет?
 
@@ -142,15 +142,15 @@ _Если вы не понимаете, чего игроки стараются
 
 [](http://www.thealexandrian.net/images/20151019b.jpg)
 
-Для большинства групп прямой вопрос “Кто это сделал?”, вероятно, будет слишком широким. (Можно представить себе, что Ведущий просто скажет игроку проверить навык Детектива, чтобы выяснить ответ на такой вопрос, но, скорее всего, в 99,99% случаев это не сработает.)  В противоположность этому, заявка “Я хочу осмотреть тело, чтобы определить время смерти” почти наверняка достаточно конкретна. (Можно представить себе Ведущего, который, перед тем как дать возможность выяснить ответ, потребует от игрока уточнить, что он проверяет синюшность {lividity} трупа, но это столь же маловероятно.)
+Для большинства групп прямой вопрос “Кто это сделал?”, вероятно, будет слишком широким. (Можно представить себе, что Ведущий просто скажет игроку проверить навык Детектива, чтобы выяснить ответ на такой вопрос, но, скорее всего, в 99,99% случаев это не сработает.)  В противоположность этому, заявка “Я хочу осмотреть тело, чтобы определить время смерти” почти наверняка достаточно конкретна. (Можно представить себе Ведущего, который, перед тем как дать возможность выяснить ответ, потребует от игрока уточнить, что он проверяет синюшность (lividity) трупа, но это столь же маловероятно.)
 
-Однако между этими крайностями есть много места для личных предпочтений. И это не является линейной шкалой. Например, достаточно ли конкретна заявка “Я обыскиваю комнату в поисках улик”? Это определенное действие, которое в большинстве систем очевидным образом соотносится с проверкой навыка. Но, может, вам хочется знать, что именно он пытается найти или каким образом он это ищет? С другой стороны, что насчет заявки “Я  хочу выяснить, каким образом он был убит”? Она более конкретная в том, что касается намерения, но менее определенная, когда дело доходит до способа. Осматривает ли персонаж тело? Обыскивает ли комнату в поисках следов {physical traces}? Проверяет ли записи с камер видеонаблюдения {security footage}?
+Однако между этими крайностями есть много места для личных предпочтений. И это не является линейной шкалой. Например, достаточно ли конкретна заявка “Я обыскиваю комнату в поисках улик”? Это определенное действие, которое в большинстве систем очевидным образом соотносится с проверкой навыка. Но, может, вам хочется знать, что именно он пытается найти или каким образом он это ищет? С другой стороны, что насчет заявки “Я  хочу выяснить, каким образом он был убит”? Она более конкретная в том, что касается намерения, но менее определенная, когда дело доходит до способа. Осматривает ли персонаж тело? Обыскивает ли комнату в поисках следов (physical traces)? Проверяет ли записи с камер видеонаблюдения (security footage)?
 
 ## Нахождение золотой середины
 
 Здесь нет “правильного” ответа, но вы интуитивно почувствуете, что вам подходит.
 
-Я бы посоветовал Ведущим установить относительно низкие требования {threshold} к  конкретности заявки, достаточной для принятия суждений. Если игрок хочет дать вам более конкретную заявку - если можно принять более подробные решения, которые он считает значимыми для данной ситуации или для его персонажа - тогда игрок волен принять эти решения.
+Я бы посоветовал Ведущим установить относительно низкие требования (threshold) к  конкретности заявки, достаточной для принятия суждений. Если игрок хочет дать вам более конкретную заявку - если можно принять более подробные решения, которые он считает значимыми для данной ситуации или для его персонажа - тогда игрок волен принять эти решения.
 
 То есть если ИП находит в подземелье сундук, типичной реакцией игрока может быть “Я обыскиваю его в поисках ловушек.” На что Ведущий может ответить “Хорошо, это достаточно конкретно. Бросай на Обыск.” Но позднее может найтись другой сундук, который игрок сочтет куда более подозрительным, так что он скажет “Я начинаю очень осторожно проверять, нет ли нажимных плит на полу вокруг и под сундуком” или “Я тщательно осматриваю сундук снаружи перед тем, как коснуться его.” И Ведущий может ответить на такие заявки, включив эти дополнительные подробности в принимаемое суждение. (Умения игрока превосходят умения персонажа.)
 
@@ -160,11 +160,11 @@ _Если вы не понимаете, чего игроки стараются
 
 Когда вы вполне поняли намерение игрока и способ его достижения, пришло время перейти к разрешению действия. Этот переход - это момент начала действия, после которого игрок (и его персонаж) совершает его. Он не может вернуться назад и принять другое решение.
 
-Эта “точка невозврата” {“point of no return”} довольно очевидна для взмаха меча: вы не можете решить, что делаете что-то другое, после того как увидели, что провалили бросок атаки. Но в других ситуациях все может быть несколько запутаннее. Например, если вы играете с картой поля боя {battlemap} и кто-нибудь говорит “Я хожу в эту клетку {square}. Нет, погодите, на самом деле я хотел сходить в вот эту клетку.”, нормально ли это? Возможно.
+Эта “точка невозврата” (“point of no return”) довольно очевидна для взмаха меча: вы не можете решить, что делаете что-то другое, после того как увидели, что провалили бросок атаки. Но в других ситуациях все может быть несколько запутаннее. Например, если вы играете с картой поля боя (battlemap) и кто-нибудь говорит “Я хожу в эту клетку (square). Нет, погодите, на самом деле я хотел сходить в вот эту клетку.”, нормально ли это? Возможно.
 
-Но что если он уже “завершил” свое движение и начал обсуждать намерение относительно следующего действия, и только после этого понял, что ему стоило бы сходить в другую клетку, чтобы его следующее действие сработало наилучшим образом? Или если он заявит “На самом деле я бы предпочел остаться в укрытии.” после того, как его персонаж вышел в коридор, и огр {ogre} использовал подготовленное действие, чтобы выстрелить по нему?
+Но что если он уже “завершил” свое движение и начал обсуждать намерение относительно следующего действия, и только после этого понял, что ему стоило бы сходить в другую клетку, чтобы его следующее действие сработало наилучшим образом? Или если он заявит “На самом деле я бы предпочел остаться в укрытии.” после того, как его персонаж вышел в коридор, и огр (ogre) использовал подготовленное действие, чтобы выстрелить по нему?
 
-Мое общее практическое правило {rule of thumb} в таких случаях состоит в том, что если
+Мое общее практическое правило (rule of thumb) в таких случаях состоит в том, что если
 
 (а) в результате действия была получена новая информация, или
 
